[tool.poetry]
name = "twitfix"
version = "1.0.0"
description = ""
authors = ["Kenneth V. Domingo <hello@kvdomingo.xyz>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flask-cors = "^3.0.10"
pillow = "^9.4.0"
requests = "^2.28.2"
boto3 = "^1.26.84"
pymongo = "^4.3.3"
yt-dlp = "^2023.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
