[tool.poetry]
name = "twitfix"
version = "1.0.0"
description = ""
authors = ["Kenneth V. Domingo <hello@kvdomingo.xyz>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flask-cors = "^3.0.10"
pillow = "^9.4.0"
requests = "^2.28.2"
boto3 = "^1.26.84"
pymongo = "^4.3.3"
yt-dlp = "^2023.3.4"
quart = "^0.18.3"
quart-cors = "^0.6.0"
aiohttp = "^3.8.4"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
loguru = "^0.6.0"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
